Add support to load a single SameSpots HTM report